--- a/css/main.css
+++ b/css/main.css
@@ -1,333 +1,14 @@
-html {
-    background-color: rgba(0,16,27,0.98); /* Dark Grey Bluish */
-    /*background-color: rgba(15,14,17,1.00);*/
-}
-
 body {
-    /*background-color: rgba(0,16,27,0.98); !* Dark Grey Bluish *!*/
-    background-color: rgba(39,38,41,0.98);
-    /*align-content: center;*/
-    /*align-self: center;*/
-    /*width: 960px;*/
+    background-color: rgba(0,16,27,0.98); /* Dark Grey Bluish */
 }
-
-/*body>.container {*/
-/*    width: 960px;*/
-/*}*/
-
-/*.earth {*/
-/*    width: 50px;*/
-/*    height: 50px;*/
-/*    left: 50px;*/
-/*}*/
 
 #React-Simulation {
     user-select: none;
     width: 930px;
     height: 800px;
-}
-
-#dynamicBackground {
-    position: relative;
-    top: 10px;
+    margin: 0 auto;
 }
 
 input[type=number]{
-    width: 58px;
-}
-
-#chart {
-    position: relative;
-    /*overflow-x: hidden;*/
-    left: 175px;
-    height: 280px;
-    background-color: transparent;
-}
-
-#legend {
-    position: relative;
-    bottom: 250px;
-    left: 750px;
-    border-radius: 5px;
-    border-style: solid;
-    border-color: teal;
-    border-width: 1px;
-    width: 160px;
-}
-
-#topHalf {
-    background-color: black;
-    height: 280px;
-    width: 920px;
-}
-
-.legendText {
-    fill: darkmagenta;
-}
-
-.graphTitleText {
-    /*color: aqua;*/
-    /*color: deeppink;*/
-    color: chocolate;
-    position: relative;
-    left: 225px;
-    top: 5px;
-    width: 225px;
-}
-
-.parameterNameText {
-    color: #64d390;
-    width: 420px;
-}
-
-.animationButton {
-    position: relative;
-    left: 780px;
-    /*bottom: 65px;*/
-    top: 10px;
-    z-index: 1;
-}
-
-.checkBox {
-    position: relative;
-    /*bottom: 290px;*/
-    top: 100px;
-    left: 705px;
-    /*left: 550px;*/
-}
-
-#checkBoxText {
-    color: chartreuse;
-    /*background-color: black;*/
-    position: relative;
-    left: 5px;
-    top: 1px;
-}
-
-.yAxis line {
-    stroke: aqua;
-}
-
-.yAxis path {
-    stroke: aqua;
-}
-
-.yAxis text {
-    stroke: aqua;
-}
-
-.xAxis line {
-    stroke: aqua;
-}
-
-.xAxis path {
-    stroke: aqua;
-}
-
-.xAxis text {
-    stroke: aqua;
-}
-
-.axisLabelText {
-    fill: chartreuse;
-}
-
-#parameterText {
-    /*color: rgba(195,87,122,0.84);*/
-    color: deeppink;
-    position: relative;
-    left: 40px;
-}
-
-.parameters {
-    position: relative;
-    bottom: 40px;
-    left: 30px;
-}
-
-.separationParameter {
-    position: relative;
-    left: 11px;
-}
-
-.expansionParameter {
-    position: relative;
-    left: 20px;
-}
-
-#separationSlider {
-    position: relative;
-    left: 150px;
-}
-
-#expansionSlider {
-    position: relative;
-    left: 158px;
-}
-
-.units {
-    position: relative;
-    display: inline-block;
-    bottom: 300px;
-    left: 300px;
-}
-
-#separationUnits {
-    /* position: relative;
-    left: 300px;
-    bottom: 138px; */
-    color: maroon;
-}
-
-#expansionUnits {
-    /* position: relative;
-    left: 350px;
-    bottom: 100px; */
-    color: maroon;
-}
-
-.animationSlider {
-    position: relative;
-    left: 80px;
-    bottom: 500px;
-    width: 20px;
-    height: 150px;
-    padding: 0;
-    z-index: 2;
-}
-
-.animationSlider input {
-    width: 150px;
-    height: 20px;
-    margin: 0;
-    transform-origin: 75px 75px;
-    transform: rotate(-90deg);
-}
-
-#animationSpeedText {
-    color: darkgoldenrod;
-    position: relative;
-    right: 25px;
-    width: 75px;
-}
-
-#animationSpeedTextLineTwo {
-    color: darkgoldenrod;
-    position: relative;
-    right: 14px;
-    bottom: 5px;
-    width: 50px;
-}
-
-.timeElapsed {
-    /*background-color: chartreuse;*/
-    /*z-index: 15;*/
-
-    position: relative;
-    display: inline-block;
-    bottom: 250px;
-    left: 780px;
-
-    height: 80px;
-}
-
-#timeElapsedText {
-    color: #64d390;
-    position: relative;
-    text-align: center;
-    top: 18px;
-}
-
-#timeElapsedNumber {
-    color: #64d390;
-    text-align: center;
-}
-
-#timeUnits {
-    color: #64d390;
-    position: relative;
-    bottom: 20px;
-}
-
-.survey {
-    display: inline-block;
-    position: relative;
-    bottom: 290px;
-    left: 625px;
-}
-
-.bottomSettings {
-    background-color: black;
-    position: relative;
-    top: 15px;
-
-    height: 150px;
-    width: 920px;
-}
-
-.criticalValues {
-    background: black;
-    position: relative;
-    display: inline-block;
-    bottom: 196px;
-    left: 310px;
-    height: 145px;
-
-    border-style: solid;
-    border-width: 1px;
-    border-color: brown;
-}
-
-#wavelengthText {
-    text-align: center;
-    color: darkcyan;
-}
-
-#wavelengthValue {
-    text-align: center;
-    position: relative;
-    bottom: 20px;
-    color: darkgoldenrod;
-}
-
-#redShiftText {
-    text-align: center;
-    position: relative;
-    bottom: 30px;
-    color: darkcyan;
-}
-
-#redShiftFactorValue {
-    text-align: center;
-    position: relative;
-    bottom: 50px;
-    color: darkgoldenrod;
-}
-
-#hubbleText {
-    text-align: center;
-    position: relative;
-    bottom: 60px;
-    color: darkcyan;
-}
-
-#hubbleConstValue {
-    text-align: center;
-    position: relative;
-    bottom: 80px;
-    color: darkgoldenrod;
-}
-
-#auto-pause-checkbox {
-    position: relative;
-    bottom: 75px;
-    left: 775px;
-    z-index: 3;
-}
-
-#auto-pause-text {
-    position: relative;
-    bottom: 74px;
-    left: 784px;
-    color: aliceblue;
+    width: 65px;
 }
